--- a/_data/data.yml
+++ b/_data/data.yml
@@ -37,7 +37,7 @@ sidebar:
     - item: Communication
       link: # dejar en blanco
 
-    - ITEM: Patience
+    - item: Patience
       link:
 
     - item: Team Work
