--- a/_data/data.yml
+++ b/_data/data.yml
@@ -98,7 +98,7 @@ skills:
     - name: Ruby on Rails (3 months)
       level: 20%
 
-    - name: Git/Github
+    - name: Git/Github (3 years)
       level: 60%
 
     - name: Linux (2 years)
